--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "lint": "eslint src",
     "build": "webpack",
     "build:watch": "npm run build -- --watch",
-    "start": "serve ."
+    "start": "serve .",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "repository": {
     "type": "git",
@@ -26,6 +28,7 @@
     "eslint-plugin-import": "^1.16.0",
     "eslint-plugin-jsx-a11y": "^2.2.3",
     "eslint-plugin-react": "^6.5.0",
+    "gh-pages": "^0.12.0",
     "jest-cli": "^16.0.2",
     "react-addons-test-utils": "^15.3.2",
     "style-loader": "^0.13.1",
